tests/yaml/sample/ServiceClient/fullloaded.yaml
apiVersion: admiralproj.io/v1alpha1
kind: ServiceClient
metadata:
name: rating-reviews
  labels:
    identity: ratings #client
spec:
  selector: #deployment to target
    identity: reviews
    version: v1
  Http:
    - match:  #HTTPMatchRequest[]
        uri:
          prefix: "/v1/*"
      timeout: 1s  #Duration
      retries: #HTTPRetry
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream
      outlierDetection: #OutlierDetection
        baseEjectionTime: 3m
        consecutiveErrors: 1
        interval: 1s
        maxEjectionPercent: 100
    - match: #HTTPMatchRequest[]
        headers:
          end-user:
            exact: jason
        fault: #HTTPFaultInjection
          delay:
            fixedDelay: 7s
            percentage:
              value: 100
